Bug 747621 - Fix clang build warnings. r=mbanner